--- a/ansible-cookbooks/postgres-etcd/add_pgnode.yml
+++ b/ansible-cookbooks/postgres-etcd/add_pgnode.yml
@@ -10,20 +10,9 @@
   vars_files:
     - vars/main.yml
     - vars/system.yml
+    - "vars/{{ ansible_os_family }}.yml"
 
   pre_tasks:
-    - name: Include OS-specific variables
-      include_vars: "vars/{{ ansible_os_family }}.yml"
-      when: not ansible_os_family == 'Rocky' and not ansible_os_family == 'AlmaLinux'
-      tags: always
-
-    # For compatibility with Ansible old versions
-    # (support for RockyLinux and AlmaLinux has been added to Ansible 2.11)
-    - name: Include OS-specific variables
-      include_vars: "vars/RedHat.yml"
-      when: ansible_os_family == 'Rocky' or ansible_os_family == 'AlmaLinux'
-      tags: always
-
     - name: Checking Linux distribution
       fail:
         msg: "{{ ansible_distribution }} is not supported"
@@ -95,18 +84,7 @@
   any_errors_fatal: true
   vars_files:
     - vars/main.yml
-  pre_tasks:
-    - name: Include OS-specific variables
-      include_vars: "vars/{{ ansible_os_family }}.yml"
-      when: not ansible_os_family == 'Rocky' and not ansible_os_family == 'AlmaLinux'
-      tags: always
-
-    # For compatibility with Ansible old versions
-    # (support for RockyLinux and AlmaLinux has been added to Ansible 2.11)
-    - name: Include OS-specific variables
-      include_vars: "vars/RedHat.yml"
-      when: ansible_os_family == 'Rocky' or ansible_os_family == 'AlmaLinux'
-      tags: always
+    - "vars/{{ ansible_os_family }}.yml"
   roles:
     - role: pgbackrest
       when: pgbackrest_install|bool
@@ -119,28 +97,13 @@
   vars_files:
     - vars/main.yml
     - vars/system.yml
+    - "vars/{{ ansible_os_family }}.yml"
   vars:
     existing_pgcluster: true
-
-  pre_tasks:
-    - name: Include OS-specific variables
-      include_vars: "vars/{{ ansible_os_family }}.yml"
-      when: not ansible_os_family == 'Rocky' and not ansible_os_family == 'AlmaLinux'
-      tags: always
-
-    # For compatibility with Ansible old versions
-    # (support for RockyLinux and AlmaLinux has been added to Ansible 2.11)
-    - name: Include OS-specific variables
-      include_vars: "vars/RedHat.yml"
-      when: ansible_os_family == 'Rocky' or ansible_os_family == 'AlmaLinux'
-      tags: always
 
   roles:
     - role: wal-g
       when: wal_g_install|bool
-
-    - role: pg_probackup
-      when: pg_probackup_install|bool
 
     - role: pgbouncer
       when: pgbouncer_install|bool
@@ -150,9 +113,6 @@
     - role: vip-manager
       when: not with_haproxy_load_balancing|bool and
             (cluster_vip is defined and cluster_vip | length > 0)
-
-    - role: netdata
-      when: netdata_install is defined and netdata_install|bool
 
     # finish (info)
     - role: deploy-finish
