--- a/ansible-cookbooks/postgres-etcd/meta/main.yml
+++ b/ansible-cookbooks/postgres-etcd/meta/main.yml
@@ -1,8 +1,7 @@
 ---
 galaxy_info:
   role_name: postgresql_cluster
-  description: PostgreSQL High-Availability Cluster (based on Patroni)
-  namespace: vitabaks
+  description: PostgreSQL High-Availability Cluster (based on Patroni).
   author: Vitaliy Kukharik (vitabaks@gmail.com)
   license: MIT
 
