--- a/ansible-cookbooks/postgres-etcd/molecule/postgrespro/molecule.yml
+++ b/ansible-cookbooks/postgres-etcd/molecule/postgrespro/molecule.yml
@@ -1,6 +1,5 @@
 ---
 # yamllint disable rule:comments-indentation
-# yamllint disable rule:line-length
 
 dependency:
   name: galaxy
@@ -10,7 +9,7 @@ driver:
 platforms:
   - name: 10.172.1.17
     hostname: etcd01
-    image: "${IMAGE_NAMESPACE:-geerlingguy}/docker-${IMAGE_DISTRO:-centos8}-ansible:${IMAGE_TAG:-latest}"
+    image: geerlingguy/docker-${MOLECULE_DISTRO:-centos8}-ansible:latest
     networks:
       - name: test_docker_network
         ipv4_address: 10.172.1.17
@@ -30,7 +29,7 @@ platforms:
 
   - name: 10.172.1.18
     hostname: etcd02
-    image: "${IMAGE_NAMESPACE:-geerlingguy}/docker-${IMAGE_DISTRO:-centos8}-ansible:${IMAGE_TAG:-latest}"
+    image: geerlingguy/docker-${MOLECULE_DISTRO:-centos8}-ansible:latest
     networks:
       - name: test_docker_network
         ipv4_address: 10.172.1.18
@@ -50,7 +49,7 @@ platforms:
 
   - name: 10.172.1.19
     hostname: etcd03
-    image: "${IMAGE_NAMESPACE:-geerlingguy}/docker-${IMAGE_DISTRO:-centos8}-ansible:${IMAGE_TAG:-latest}"
+    image: geerlingguy/docker-${MOLECULE_DISTRO:-centos8}-ansible:latest
     networks:
       - name: test_docker_network
         ipv4_address: 10.172.1.19
@@ -70,7 +69,7 @@ platforms:
 
   - name: 10.172.1.20
     hostname: pgnode01
-    image: "${IMAGE_NAMESPACE:-geerlingguy}/docker-${IMAGE_DISTRO:-centos8}-ansible:${IMAGE_TAG:-latest}"
+    image: geerlingguy/docker-${MOLECULE_DISTRO:-centos8}-ansible:latest
     networks:
       - name: test_docker_network
         ipv4_address: 10.172.1.20
@@ -93,7 +92,7 @@ platforms:
 
   - name: 10.172.1.21
     hostname: pgnode02
-    image: "${IMAGE_NAMESPACE:-geerlingguy}/docker-${IMAGE_DISTRO:-centos8}-ansible:${IMAGE_TAG:-latest}"
+    image: geerlingguy/docker-${MOLECULE_DISTRO:-centos8}-ansible:latest
     networks:
       - name: test_docker_network
         ipv4_address: 10.172.1.21
