--- a/ansible-cookbooks/postgres-etcd/vars/Debian.yml
+++ b/ansible-cookbooks/postgres-etcd/vars/Debian.yml
@@ -30,7 +30,7 @@ apt_repository:
 os_specific_packages:
   Debian-9: [python, python-dev, python-psycopg2, python-setuptools]
   Debian-10: [python, python-dev, python-psycopg2, python-setuptools]
-  Debian-11: [python3]  # python 2 is not required
+  Ubuntu-16: [python, python-dev, python-psycopg2, python-setuptools]
   Ubuntu-18: [python, python-dev, python-psycopg2, python-setuptools]
   Ubuntu-20: [python3]  # python 2 is not required
 system_packages:
@@ -63,8 +63,8 @@ vip_manager_package_repo: "https://github.com/cybertec-postgresql/vip-manager/re
 # (if with_haproxy_load_balancing: true)
 haproxy_installation_method: "deb"  # (default)"deb" or "src"
 haproxy_install_repo: true  # or 'false'
-# for Debian 9/10 the haproxy version 1.8 (LTS) will be installed from the haproxy.debian.net repository.
-# for Ubuntu 18.04 the haproxy version 1.8 (LTS) will be installed from the ppa:vbernat/haproxy-1.8 repository.
+# for Debian 8/9/10 the haproxy version 1.8 (LTS) will be installed from the haproxy.debian.net repository.
+# for Ubuntu <=18.04 the haproxy version 1.8 (LTS) will be installed from the ppa:vbernat/haproxy-1.8 repository.
 # you can preload the haproxy deb packages to your APT repository (in this case specify "haproxy_install_repo: false").
 confd_package_repo: "https://github.com/kelseyhightower/confd/releases/download/v0.16.0/confd-0.16.0-linux-amd64"
 
