--- a/ansible-cookbooks/postgres-etcd/vars/main.yml
+++ b/ansible-cookbooks/postgres-etcd/vars/main.yml
@@ -25,14 +25,9 @@ synchronous_mode: false  # or 'true' for enable synchronous database replication
 synchronous_mode_strict: false  # if 'true' then block all client writes to the master, when a synchronous replica is not available
 synchronous_node_count: 1  # number of synchronous standby databases
 
+
 # Load Balancing
 with_haproxy_load_balancing: false  # or 'true' if you want to install and configure the load-balancing
-haproxy_listen_port:
-  master: 5000
-  replicas: 5001
-  replicas_sync: 5002
-  replicas_async: 5003
-  stats: 7000
 haproxy_maxconn:
   global: 100000
   master: 10000
@@ -55,7 +50,7 @@ dcs_exists: false  # or 'true' if you do not want to install and configure the e
 dcs_type: "etcd"
 
 # if dcs_exists: false and dcs_type: "etcd"
-etcd_ver: "v3.3.27"  # version for deploy etcd cluster
+etcd_ver: "v3.3.25"  # version for deploy etcd cluster
 etcd_data_dir: "/var/lib/etcd"
 etcd_cluster_name: "etcd-{{ patroni_cluster_name }}"  # ETCD_INITIAL_CLUSTER_TOKEN
 
@@ -72,20 +67,19 @@ patroni_etcd_hosts: []
 
 
 # PostgreSQL variables
-postgresql_version: "14"
+postgresql_version: "13"
 # postgresql_data_dir: see vars/Debian.yml or vars/RedHat.yml
 postgresql_port: "5432"
 postgresql_encoding: "UTF8"  # for bootstrap only (initdb)
 postgresql_locale: "en_US.UTF-8"  # for bootstrap only (initdb)
 postgresql_data_checksums: true  # for bootstrap only (initdb)
-postgresql_password_encryption_algorithm: "scram-sha-256"  # or "md5" if your clients do not work with passwords encrypted with SCRAM-SHA-256
 
 # (optional) list of users to be created (if not already exists)
 postgresql_users: []
-#  - {name: "mydb-user", password: "mydb-user-pass", flags: "SUPERUSER"}
-#  - {name: "", password: "", flags: "NOSUPERUSER"}
-#  - {name: "", password: "", flags: "NOSUPERUSER"}
-#  - {name: "", password: "", flags: "NOLOGIN"}
+#  - {name: "mydb-user", password: "mydb-user-pass"}
+#  - {name: "", password: ""}
+#  - {name: "", password: ""}
+#  - {name: "", password: ""}
 
 # (optional) list of databases to be created (if not already exists)
 postgresql_databases: []
@@ -107,9 +101,8 @@ postgresql_extensions: []
 
 # postgresql parameters to bootstrap dcs (are parameters for example)
 postgresql_parameters:
-  - {option: "max_connections", value: "500"}
+  - {option: "max_connections", value: "100"}
   - {option: "superuser_reserved_connections", value: "5"}
-  - {option: "password_encryption", value: "{{ postgresql_password_encryption_algorithm }}"}
   - {option: "max_locks_per_transaction", value: "64"}  # raise this value (ex. 512) if you have queries that touch many different tables (partitioning)
   - {option: "max_prepared_transactions", value: "0"}
   - {option: "huge_pages", value: "try"}  # or "on" if you set "vm_nr_hugepages" in kernel parameters
@@ -119,8 +112,8 @@ postgresql_parameters:
   - {option: "effective_cache_size", value: "4GB"}  # please change this value
   - {option: "checkpoint_timeout", value: "15min"}
   - {option: "checkpoint_completion_target", value: "0.9"}
-  - {option: "min_wal_size", value: "2GB"}
-  - {option: "max_wal_size", value: "8GB"}  # or 16GB/32GB
+  - {option: "min_wal_size", value: "2GB"}  # for PostgreSQL 9.5 and above (for 9.4 use "checkpoint_segments")
+  - {option: "max_wal_size", value: "4GB"}  # for PostgreSQL 9.5 and above (for 9.4 use "checkpoint_segments")
   - {option: "wal_buffers", value: "32MB"}
   - {option: "default_statistics_target", value: "1000"}
   - {option: "seq_page_cost", value: "1"}
@@ -129,10 +122,10 @@ postgresql_parameters:
   - {option: "synchronous_commit", value: "on"}  # or 'off' if you can you lose single transactions in case of a crash
   - {option: "autovacuum", value: "on"}  # never turn off the autovacuum!
   - {option: "autovacuum_max_workers", value: "5"}
-  - {option: "autovacuum_vacuum_scale_factor", value: "0.01"}  # or 0.005/0.001
-  - {option: "autovacuum_analyze_scale_factor", value: "0.01"}
-  - {option: "autovacuum_vacuum_cost_limit", value: "500"}  # or 1000/5000
-  - {option: "autovacuum_vacuum_cost_delay", value: "2"}
+  - {option: "autovacuum_vacuum_scale_factor", value: "0.01"}
+  - {option: "autovacuum_analyze_scale_factor", value: "0.02"}
+  - {option: "autovacuum_vacuum_cost_limit", value: "200"}  # or 500/1000
+  - {option: "autovacuum_vacuum_cost_delay", value: "20"}
   - {option: "autovacuum_naptime", value: "1s"}
   - {option: "max_files_per_process", value: "4096"}
   - {option: "archive_mode", value: "on"}
@@ -140,18 +133,16 @@ postgresql_parameters:
   - {option: "archive_command", value: "cd ."}  # not doing anything yet with WAL-s
 #  - {option: "archive_command", value: "wal-g wal-push %p"}  # archive WAL-s using WAL-G
 #  - {option: "archive_command", value: "pgbackrest --stanza={{ pgbackrest_stanza }} archive-push %p"}  # archive WAL-s using pgbackrest
-  - {option: "wal_level", value: "replica"}
-  - {option: "wal_keep_size", value: "2GB"}
+  - {option: "wal_level", value: "replica"}  # "replica" for PostgreSQL 9.6 and above (for 9.4, 9.5 use "hot_standby")
+  - {option: "wal_keep_segments", value: "130"}
   - {option: "max_wal_senders", value: "10"}
   - {option: "max_replication_slots", value: "10"}
   - {option: "hot_standby", value: "on"}
   - {option: "wal_log_hints", value: "on"}
-  - {option: "wal_compression", value: "on"}
   - {option: "shared_preload_libraries", value: "pg_stat_statements,auto_explain"}
   - {option: "pg_stat_statements.max", value: "10000"}
   - {option: "pg_stat_statements.track", value: "all"}
-  - {option: "pg_stat_statements.track_utility", value: "false"}
-  - {option: "pg_stat_statements.save", value: "true"}
+  - {option: "pg_stat_statements.save", value: "off"}
   - {option: "auto_explain.log_min_duration", value: "10s"}  # 10 sec (by default). Decrease this value if necessary
   - {option: "auto_explain.log_analyze", value: "true"}
   - {option: "auto_explain.log_buffers", value: "true"}
@@ -173,16 +164,15 @@ postgresql_parameters:
   - {option: "log_line_prefix", value: "'%t [%p-%l] %r %q%u@%d '"}
   - {option: "log_filename", value: "'postgresql-%a.log'"}
   - {option: "log_directory", value: "{{ postgresql_log_dir }}"}
-  - {option: "hot_standby_feedback", value: "on"}  # allows feedback from a hot standby to the primary that will avoid query conflicts
-  - {option: "max_standby_streaming_delay", value: "30s"}
-  - {option: "wal_receiver_status_interval", value: "10s"}
-  - {option: "idle_in_transaction_session_timeout", value: "10min"}  # reduce this timeout if possible
-  - {option: "jit", value: "off"}
+#  - {option: "idle_in_transaction_session_timeout", value: "600000"}  # for PostgreSQL 9.6 and above
 #  - {option: "max_worker_processes", value: "24"}
-#  - {option: "max_parallel_workers", value: "12"}
-#  - {option: "max_parallel_workers_per_gather", value: "2"}
-#  - {option: "max_parallel_maintenance_workers", value: "2"}
-#  - {option: "old_snapshot_threshold", value: "60min"}
+#  - {option: "max_parallel_workers", value: "24"}  # for PostgreSQL 10 and above
+#  - {option: "max_parallel_workers_per_gather", value: "4"}  # for PostgreSQL 9.6 and above
+#  - {option: "max_parallel_maintenance_workers", value: "2"}  # for PostgreSQL 11 and above
+#  - {option: "hot_standby_feedback", value: "on"}  # allows feedback from a hot standby to the primary that will avoid query conflicts
+#  - {option: "max_standby_streaming_delay", value: "30s"}
+#  - {option: "wal_receiver_status_interval", value: "10s"}
+#  - {option: "old_snapshot_threshold", value: "60min"}  # for PostgreSQL 9.6 and above (1min-60d)
 #  - {option: "", value: ""}
 #  - {option: "", value: ""}
 
@@ -191,9 +181,9 @@ postgresql_parameters:
 postgresql_pg_hba:
   - {type: "local", database: "all", user: "postgres", address: "", method: "trust"}  # "local=trust" required for ansible modules "postgresql_(user,db,ext)"
   - {type: "local", database: "all", user: "all", address: "", method: "peer"}
-  - {type: "host", database: "all", user: "all", address: "127.0.0.1/32", method: "{{ postgresql_password_encryption_algorithm }}"}
-  - {type: "host", database: "all", user: "all", address: "::1/128", method: "{{ postgresql_password_encryption_algorithm }}"}
-#  - {type: "host", database: "mydatabase", user: "mydb-user", address: "192.168.0.0/24", method: "{{ postgresql_password_encryption_algorithm }}"}
+  - {type: "host", database: "all", user: "all", address: "127.0.0.1/32", method: "md5"}
+  - {type: "host", database: "all", user: "all", address: "::1/128", method: "md5"}
+#  - {type: "host", database: "mydatabase", user: "mydb-user", address: "192.168.0.0/24", method: "md5"}
 #  - {type: "host", database: "all", user: "all", address: "192.168.0.0/24", method: "ident", options: "map=main"}  # use pg_ident
 
 # list of lines that Patroni will use to generate pg_ident.conf
@@ -211,8 +201,7 @@ pgbouncer_max_client_conn: 10000
 pgbouncer_max_db_connections: 1000
 pgbouncer_default_pool_size: 20
 pgbouncer_default_pool_mode: "session"
-pgbouncer_generate_userlist: true  # generate the authentication file (userlist.txt) from the pg_shadow system table
-pgbouncer_auth_type: "{{ postgresql_password_encryption_algorithm }}"
+pgbouncer_generate_userlist: true  # generate userlist.txt (all users and passwords md5) FROM pg_shadow
 
 pgbouncer_pools:
   - {name: "postgres", dbname: "postgres", pool_parameters: ""}
@@ -227,14 +216,6 @@ patroni_loop_wait: 10
 patroni_retry_timeout: 10
 patroni_maximum_lag_on_failover: 1048576
 patroni_master_start_timeout: 300
-
-# https://patroni.readthedocs.io/en/latest/replica_bootstrap.html#standby-cluster
-patroni_standby_cluster:
-  host: ""  # an address of remote master
-  port: "5432"  # a port of remote master
-#  primary_slot_name: ""  # which slot on the remote master to use for replication (optional)
-#  restore_command: ""  # command to restore WAL records from the remote master to standby leader (optional)
-#  recovery_min_apply_delay: ""  # how long to wait before actually apply WAL records on a standby leader (optional)
 
 patroni_log_destination: stderr  # or 'logfile'
 # if patroni_log_destination: logfile
@@ -261,13 +242,12 @@ patroni_remove_data_directory_on_diverged_timelines: false  # or 'true'
 # if it notices that timelines are diverging and the former master can not start streaming from the new master.
 
 # https://patroni.readthedocs.io/en/latest/replica_bootstrap.html#bootstrap
-patroni_cluster_bootstrap_method: "initdb"  # or "wal-g", "pgbackrest", "pg_probackup"
+patroni_cluster_bootstrap_method: "initdb"  # or "wal-g", "pgbackrest"
 
 # https://patroni.readthedocs.io/en/latest/replica_bootstrap.html#building-replicas
 patroni_create_replica_methods:
 #  - pgbackrest
 #  - wal_g
-#  - pg_probackup
   - basebackup
 
 pgbackrest:
@@ -280,25 +260,12 @@ wal_g:
 basebackup:
   - {option: "max-rate", value: "100M"}
   - {option: "checkpoint", value: "fast"}
-pg_probackup:
-  - {option: "command", value: "pg_probackup-{{ pg_probackup_version }} restore -B {{ pg_probackup_dir }} --instance {{ pg_probackup_instance }} -j {{ pg_probackup_threads }} {{ pg_probackup_add_keys }}"}
-  - {option: "no_params", value: "true"}
 
 # "restore_command" written to recovery.conf when configuring follower (create replica)
 postgresql_restore_command: ""
 # postgresql_restore_command: "wal-g wal-fetch %f %p"  # restore WAL-s using WAL-G
 # postgresql_restore_command: "pgbackrest --stanza={{ pgbackrest_stanza }} archive-get %f %p"  # restore WAL-s using pgbackrest
-# postgresql_restore_command: "pg_probackup-{{ pg_probackup_version }} archive-get -B {{ pg_probackup_dir }} --instance {{ pg_probackup_instance }} --wal-file-path=%p --wal-file-name=%f"  # restore WAL-s using pg_probackup
 
-# pg_probackup
-pg_probackup_install: false  # or 'true'
-pg_probackup_install_from_postgrespro_repo: true  # or 'false'
-pg_probackup_version: "13"
-pg_probackup_instance: "pg_probackup_instance_name"
-pg_probackup_dir: "/mnt/backup_dir"
-pg_probackup_threads: "4"
-pg_probackup_add_keys: "--recovery-target=latest --skip-external-dirs --no-validate"
-pg_probackup_patroni_cluster_bootstrap_command: "pg_probackup-{{ pg_probackup_version }} restore -B {{ pg_probackup_dir }} --instance {{ pg_probackup_instance }} -j {{ pg_probackup_threads }} {{ pg_probackup_add_keys }}"
 
 # WAL-G
 wal_g_install: false  # or 'true'
@@ -349,16 +316,5 @@ pgbackrest_patroni_cluster_restore_command:
 
 disable_archive_command: true  # or 'false' to not disable archive_command after restore
 keep_patroni_dynamic_json: true  # or 'false' to remove patroni.dynamic.json after restore (if exists)
-
-
-# Netdata - https://github.com/netdata/netdata
-netdata_install: false  # or 'true' for install Netdata on postgresql cluster nodes (with kickstart.sh)
-netdata_install_options: "--stable-channel --disable-telemetry --dont-wait"
-netdata_conf:
-  web_bind_to: "*"
-  # https://learn.netdata.cloud/docs/store/change-metrics-storage
-  memory_mode: "dbengine"  # The long-term metrics storage with efficient RAM and disk usage.
-  page_cache_size: 64  # Determines the amount of RAM in MiB that is dedicated to caching Netdata metric values.
-  dbengine_disk_space: 1024  # Determines the amount of disk space in MiB that is dedicated to storing Netdata metric values.
 
 ...
