--- a/ansible-cookbooks/kafka-zookeeper/playbook.yml
+++ b/ansible-cookbooks/kafka-zookeeper/playbook.yml
@@ -8,10 +8,7 @@
   become: true
   roles:
     - role: zookeeper
-      sansible_zookeeper_hosts:
-        - 172.31.27.143
-        - 172.31.26.101
-        - 172.31.18.124
+      sansible_zookeeper_hosts: kafka
 
 - name: Install kafka
   hosts: kafka
@@ -20,7 +17,4 @@
     - role: kafka
       sansible_kafka_listen_address: "{{ ansible_default_ipv4.address }}"
       sansible_kafka_advertised_host_name: "{{ ansible_default_ipv4.address }}"
-      sansible_kafka_zookeeper_hosts:
-        - 172.31.27.143
-        - 172.31.26.101
-        - 172.31.18.124
+      sansible_kafka_zookeeper_hosts: "{{ groups[ 'kafka' ] }}"
