--- a/ansible-cookbooks/kafka-zookeeper/playbook.yml
+++ b/ansible-cookbooks/kafka-zookeeper/playbook.yml
@@ -8,7 +8,10 @@
   become: true
   roles:
     - role: zookeeper
-      sansible_zookeeper_hosts: "{{ groups[ 'kafka' ] }}"
+      sansible_zookeeper_hosts:
+        - 172.31.27.143
+        - 172.31.26.101
+        - 172.31.18.124
 
 - name: Install kafka
   hosts: kafka
@@ -17,4 +20,7 @@
     - role: kafka
       sansible_kafka_listen_address: "{{ ansible_default_ipv4.address }}"
       sansible_kafka_advertised_host_name: "{{ ansible_default_ipv4.address }}"
-      sansible_kafka_zookeeper_hosts: "{{ groups[ 'kafka' ] }}"
+      sansible_kafka_zookeeper_hosts:
+        - 172.31.27.143
+        - 172.31.26.101
+        - 172.31.18.124
