--- a/ansible-cookbooks/kubernetes/initial.yml
+++ b/ansible-cookbooks/kubernetes/initial.yml
@@ -10,7 +10,12 @@
         line: 'kubeuser ALL=(ALL) NOPASSWD: ALL'
         validate: 'visudo -cf %s'
 
+    - name: Generate /etc/ssh/ RSA host key
+        command: ssh-keygen -q -t rsa -f /etc/ssh/ssh_host_rsa_key -C "" -N ""
+        args:
+          creates: /etc/ssh/ssh_host_rsa_key
+
     - name: set up authorized keys for the ubuntu user
       authorized_key: user=kubeuser key="{{item}}"
       with_file:
-        - "{{ kube_access_key }}"
+        - /etc/ssh/ssh_host_rsa_key.pub
