--- a/ansible-cookbooks/kubernetes/initial.yml
+++ b/ansible-cookbooks/kubernetes/initial.yml
@@ -11,7 +11,7 @@
         validate: 'visudo -cf %s'
 
     - name: Generate /etc/ssh/ RSA host key
-        command: ssh-keygen -q -t rsa -f /etc/ssh/ssh_host_rsa_key -C "" -N ""
+        command: 'ssh-keygen -q -t rsa -f /etc/ssh/ssh_host_rsa_key -C "" -N ""'
         args:
           creates: /etc/ssh/ssh_host_rsa_key
 
