--- a/ansible-cookbooks/kubernetes/master.yml
+++ b/ansible-cookbooks/kubernetes/master.yml
@@ -9,7 +9,7 @@
 
     - name: create .kube directory
       become: yes
-      become_user: ubuntu
+      become_user: kubeuser
       file:
         path: $HOME/.kube
         state: directory
@@ -20,11 +20,11 @@
         src: /etc/kubernetes/admin.conf
         dest: /home/ubuntu/.kube/config
         remote_src: yes
-        owner: ubuntu
+        owner: kubeuser
 
     - name: install Pod network
       become: yes
-      become_user: ubuntu
+      become_user: kubeuser
       shell: kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/a70459be0084506e4ec919aa1c114638878db11b/Documentation/kube-flannel.yml >> pod_network_setup.txt
       args:
         chdir: $HOME
