--- a/ansible-cookbooks/kubernetes/master.yml
+++ b/ansible-cookbooks/kubernetes/master.yml
@@ -1,8 +1,9 @@
+---
 - hosts: kmasters
   become: yes
   tasks:
     - name: initialize the cluster
-      shell: kubeadm init --pod-network-cidr=10.244.0.0/16 >> cluster_initialized.txt
+      shell: kubeadm init --pod-network-cidr=10.244.0.0/16
       args:
         chdir: $HOME
         creates: cluster_initialized.txt
@@ -15,7 +16,7 @@
         state: directory
         mode: 0755
 
-    - name: copy admin.conf to user's kube config
+    - name: copies admin.conf to user's kube config
       copy:
         src: /etc/kubernetes/admin.conf
         dest: /home/kubeuser/.kube/config
@@ -25,7 +26,19 @@
     - name: install Pod network
       become: yes
       become_user: kubeuser
-      shell: kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/a70459be0084506e4ec919aa1c114638878db11b/Documentation/kube-flannel.yml >> pod_network_setup.txt
+      shell: kubectl apply -f https://docs.projectcalico.org/manifests/calico.yaml
       args:
         chdir: $HOME
-        creates: pod_network_setup.txt
+
+    - name: Get the token for joining the worker nodes
+      become: yes
+      become_user: kubeuser
+      shell: kubeadm token create  --print-join-command
+      register: kubernetes_join_command
+
+    - debug:
+      msg: "{{ kubernetes_join_command.stdout }}"
+
+    - name: Copy join command to local file.
+      become: yes
+      local_action: copy content="{{ kubernetes_join_command.stdout_lines[0] }}" dest="/tmp/kubernetes_join_command" mode=0777
