--- a/ansible-cookbooks/kubernetes/master.yml
+++ b/ansible-cookbooks/kubernetes/master.yml
@@ -3,7 +3,7 @@
   become: yes
   tasks:
     - name: initialize the cluster
-      shell: kubeadm init --pod-network-cidr=10.244.0.0/16 --ignore-preflight-errors all
+      shell: sudo kubeadm init --pod-network-cidr=10.244.0.0/16 --ignore-preflight-errors all
       args:
         chdir: $HOME
         creates: cluster_initialized.txt
