--- a/ansible-cookbooks/kubernetes/kube-dependencies.yml
+++ b/ansible-cookbooks/kubernetes/kube-dependencies.yml
@@ -1,74 +1,44 @@
----
-- hosts: "kmasters, kworkers"
+- hosts: "kmasters,kworkers"
   become: yes
-  become_method: sudo
-  gather_facts: yes
-
   tasks:
-    - name: Create containerd config file
-      file:
-        path: "/etc/modules-load.d/containerd.conf"
-        state: "touch"
+    - name: install Docker
+      apt:
+        name: docker.io
+        state: present
+        update_cache: true
 
-    - name: Add conf for containerd
-      blockinfile:
-        path: "/etc/modules-load.d/containerd.conf"
-        block: |
-          overlay
-          br_netfilter
+    - name: install APT Transport HTTPS
+      apt:
+        name: apt-transport-https
+        state: present
 
-    - name: modprobe
-      shell: |
-        sudo modprobe overlay
-        sudo modprobe br_netfilter
+    - name: add Kubernetes apt-key
+      apt_key:
+        url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
+        state: present
 
+    - name: add Kubernetes' APT repository
+      apt_repository:
+        repo: deb http://apt.kubernetes.io/ kubernetes-xenial main
+        state: present
+        filename: 'kubernetes'
 
-    - name: Set system configurations for Kubernetes networking
-      file:
-        path: "/etc/sysctl.d/99-kubernetes-cri.conf"
-        state: "touch"
+    - name: install kubelet
+      apt:
+        name: kubelet
+        state: present
+        update_cache: true
 
-    - name: Add conf for containerd
-      blockinfile:
-        path: "/etc/sysctl.d/99-kubernetes-cri.conf"
-        block: |
-          net.bridge.bridge-nf-call-iptables = 1
-          net.ipv4.ip_forward = 1
-          net.bridge.bridge-nf-call-ip6tables = 1
+    - name: install kubeadm
+      apt:
+        name: kubeadm
+        state: present
 
-    - name: Apply new settings
-      command: sudo sysctl --system
-
-    - name: install containerd
-      shell: |
-        sudo apt-get update && sudo apt-get install -y containerd
-        sudo mkdir -p /etc/containerd
-        sudo containerd config default | sudo tee /etc/containerd/config.toml
-        sudo systemctl restart containerd
-
-    - name: disable swap
-      shell: |
-        sudo swapoff -a
-        sudo sed -i '/ swap / s/^\(.*\)$/#\1/g' /etc/fstab
-
-    - name: install and configure dependencies
-      shell: |
-        sudo apt-get update && sudo apt-get install -y apt-transport-https curl
-        curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
-
-    - name: Create kubernetes repo file
-      file:
-        path: "/etc/apt/sources.list.d/kubernetes.list"
-        state: "touch"
-
-    - name: Add K8s Source
-      blockinfile:
-        path: "/etc/apt/sources.list.d/kubernetes.list"
-        block: |
-          deb https://apt.kubernetes.io/ kubernetes-xenial main
-
-    - name: install kubernetes
-      shell: |
-        sudo apt-get update
-        sudo apt-get install -y kubelet kubeadm kubectl
-        sudo apt-mark hold kubelet kubeadm kubectl
+- hosts: master
+  become: yes
+  tasks:
+    - name: install kubectl
+      apt:
+        name: kubectl
+        state: present
+        force: yes
