--- a/ansible-cookbooks/kubernetes/master.yml
+++ b/ansible-cookbooks/kubernetes/master.yml
@@ -8,18 +8,18 @@
         creates: cluster_initialized.txt
 
     - name: create .kube directory
-      shell: sudo mkdir -p -m755 /home/kubeuser/.kube
+      shell: mkdir -p -m755 /home/ubuntu/.kube
 
     - name: copy admin.conf to user's kube config
       copy:
         src: /etc/kubernetes/kubelet.conf
-        dest: /home/kubeuser/.kube/config
+        dest: /home/ubuntu/.kube/config
         remote_src: yes
-        owner: kubeuser
+        owner: ubuntu
 
     - name: install Pod network
       become: yes
-      become_user: kubeuser
+      become_user: ubuntu
       shell: kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/a70459be0084506e4ec919aa1c114638878db11b/Documentation/kube-flannel.yml >> pod_network_setup.txt
       args:
         chdir: $HOME
