--- a/ansible-cookbooks/kubernetes/workers.yml
+++ b/ansible-cookbooks/kubernetes/workers.yml
@@ -3,7 +3,7 @@
   gather_facts: false
   tasks:
     - name: get join command
-      shell: kubeadm token create --print-join-command
+      shell: sudo kubeadm token create --print-join-command
       register: join_command_raw
 
     - name: set join command
@@ -15,7 +15,7 @@
   become: yes
   tasks:
     - name: join cluster
-      shell: "{{ hostvars['master'].join_command }} >> node_joined.txt"
+      shell: "{{ hostvars['kmasters'].join_command }} >> node_joined.txt"
       args:
         chdir: $HOME
         creates: node_joined.txt
