--- a/ansible-cookbooks/kubernetes/kube-dependencies.yml
+++ b/ansible-cookbooks/kubernetes/kube-dependencies.yml
@@ -25,19 +25,19 @@
 
     - name: install kubelet
       apt:
-        name: kubelet
+        name: kubelet=1.20.1
         state: present
         update_cache: true
 
     - name: install kubeadm
       apt:
-        name: kubeadm
+        name: kubeadm=1.20.1
         state: present
 
 - hosts: master
   become: yes
   tasks:
-    - name: install kubectl
+    - name: install kubectl=1.20.1
       apt:
         name: kubectl
         state: present
