--- a/inventory.ini
+++ b/inventory.ini
@@ -11,25 +11,26 @@ etcdnode03 ansible_host=192.168.0.11 ansible_ssh_private_key_file=./divoc-instal
 
 # etcd configuration
 [etcd_cluster]  # recommendation: 3 or 5-7 nodes
-etcdnode01
-etcdnode02
-etcdnode03
+192.168.0.14 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.7 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.11 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+
 
 # Postgres  configuration
 # if with_haproxy_load_balancing: true (in vars/main.yml)
 [balancers]
-pgnode01
-pgnode02
-pgnode03
+192.168.0.14 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.7 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.11 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
 
 
 # PostgreSQL nodes
 [pg_master]
-pgnode01 postgresql_exists='false'
+192.168.0.11 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
 
 [pg_replica]
-pgnode02 postgresql_exists='false'
-pgnode03 postgresql_exists='false'
+192.168.0.14 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
+192.168.0.7 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
 
 [postgres_cluster:children]
 pg_master
