--- a/inventory.ini
+++ b/inventory.ini
@@ -16,16 +16,16 @@
 
 
 # PostgreSQL nodes
-[pg_master]
+[master]
 192.168.0.12 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
 
-[pg_replica]
+[replica]
 192.168.0.4 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
 192.168.0.13 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
 
 [postgres_cluster:children]
-pg_master
-pg_replica
+master
+replica
 
 [postgres_cluster:vars]
 postgresql_users="[{name: 'registry', password: 'registry123'},{name: 'keycloak', password: 'keycloak123'}]"
