adding remote access

--- a/inventory.ini
+++ b/inventory.ini
@@ -25,12 +25,12 @@
 
 [postgres_cluster:children]
 master
-replica
+.0.12replica
 
 [postgres_cluster:vars]
 postgresql_users="[{name: 'registry', password: 'registry123'},{name: 'keycloak', password: 'keycloak123'}]"
 postgresql_databases="[{db: 'registry', encoding: 'en_US.UTF-8', lc_collate: 'en_US.UTF-8', lc_ctype: 'en_US.UTF-8', owner: 'registry'},{db: 'keycloak', encoding: 'en_US.UTF-8', lc_collate: 'en_US.UTF-8', lc_ctype: 'en_US.UTF-8', owner: 'keycloak'}]"
-
+postgresql_pg_hba="[{type: 'host', database: 'all', user: 'all', address: '0.0.0.0/0', method: 'md5'},{type: 'host', database: 'all', user: 'all', address: '::/0', method: 'md5'}]"
 
 
 # ------------------------------------------------------------------------------
