--- a/inventory.ini
+++ b/inventory.ini
@@ -25,7 +25,7 @@
 
 [postgres_cluster:children]
 master
-.0.12replica
+replica
 
 [postgres_cluster:vars]
 postgresql_users="[{name: 'registry', password: 'registry123'},{name: 'keycloak', password: 'keycloak123'}]"
