--- a/ansible-cookbooks/postgres-etcd/vars/main.yml
+++ b/ansible-cookbooks/postgres-etcd/vars/main.yml
@@ -75,9 +75,9 @@ postgresql_locale: "en_US.UTF-8"  # for bootstrap only (initdb)
 postgresql_data_checksums: true  # for bootstrap only (initdb)
 
 # (optional) list of users to be created (if not already exists)
-postgresql_users: []
-#  - {name: "mydb-user", password: "mydb-user-pass"}
-#  - {name: "", password: ""}
+postgresql_users:
+  - {name: "registry", password: registry123"}
+  - {name: "keycloak", password: "keycloak123"}
 #  - {name: "", password: ""}
 #  - {name: "", password: ""}
 
@@ -181,8 +181,8 @@ postgresql_parameters:
 postgresql_pg_hba:
   - {type: "local", database: "all", user: "postgres", address: "", method: "trust"}  # "local=trust" required for ansible modules "postgresql_(user,db,ext)"
   - {type: "local", database: "all", user: "all", address: "", method: "peer"}
-  - {type: "host", database: "all", user: "all", address: "127.0.0.1/32", method: "md5"}
-  - {type: "host", database: "all", user: "all", address: "::1/128", method: "md5"}
+  - {type: "host", database: "all", user: "all", address: "0.0.0.0/0", method: "md5"}
+  - {type: "host", database: "all", user: "all", address: "::/0", method: "md5"}
 #  - {type: "host", database: "mydatabase", user: "mydb-user", address: "192.168.0.0/24", method: "md5"}
 #  - {type: "host", database: "all", user: "all", address: "192.168.0.0/24", method: "ident", options: "map=main"}  # use pg_ident
 
