--- a/ansible-cookbooks/postgres-etcd/molecule/default/converge.yml
+++ b/ansible-cookbooks/postgres-etcd/molecule/default/converge.yml
@@ -9,6 +9,7 @@
         firewall_enable_ipv6: false  # Added to prevent test failures in CI.
         sysctl_set: false  # Added to prevent test failures in CI.
         nameservers: ["8.8.8.8", "9.9.9.9"]
+        with_haproxy_load_balancing: true
         cacheable: true
 
     - name: Prepare | Clean yum cache
