--- a/ansible-cookbooks/postgres-etcd/molecule/default/molecule.yml
+++ b/ansible-cookbooks/postgres-etcd/molecule/default/molecule.yml
@@ -1,5 +1,6 @@
 ---
 # yamllint disable rule:comments-indentation
+# yamllint disable rule:line-length
 
 dependency:
   name: galaxy
@@ -9,7 +10,7 @@ driver:
 platforms:
   - name: 10.172.0.17
     hostname: etcd01
-    image: geerlingguy/docker-${MOLECULE_DISTRO:-centos8}-ansible:latest
+    image: "${IMAGE_NAMESPACE:-geerlingguy}/docker-${IMAGE_DISTRO:-centos8}-ansible:${IMAGE_TAG:-latest}"
     # docker_networks:  # TODO github.com/ansible-community/molecule/pull/2696
       # - name: test_docker_network
         # ipam_config:
@@ -34,7 +35,7 @@ platforms:
 
   - name: 10.172.0.18
     hostname: etcd02
-    image: geerlingguy/docker-${MOLECULE_DISTRO:-centos8}-ansible:latest
+    image: "${IMAGE_NAMESPACE:-geerlingguy}/docker-${IMAGE_DISTRO:-centos8}-ansible:${IMAGE_TAG:-latest}"
     networks:
       - name: test_docker_network
         ipv4_address: 10.172.0.18
@@ -54,7 +55,7 @@ platforms:
 
   - name: 10.172.0.19
     hostname: etcd03
-    image: geerlingguy/docker-${MOLECULE_DISTRO:-centos8}-ansible:latest
+    image: "${IMAGE_NAMESPACE:-geerlingguy}/docker-${IMAGE_DISTRO:-centos8}-ansible:${IMAGE_TAG:-latest}"
     networks:
       - name: test_docker_network
         ipv4_address: 10.172.0.19
@@ -74,7 +75,7 @@ platforms:
 
   - name: 10.172.0.20
     hostname: pgnode01
-    image: geerlingguy/docker-${MOLECULE_DISTRO:-centos8}-ansible:latest
+    image: "${IMAGE_NAMESPACE:-geerlingguy}/docker-${IMAGE_DISTRO:-centos8}-ansible:${IMAGE_TAG:-latest}"
     networks:
       - name: test_docker_network
         ipv4_address: 10.172.0.20
@@ -97,7 +98,7 @@ platforms:
 
   - name: 10.172.0.21
     hostname: pgnode02
-    image: geerlingguy/docker-${MOLECULE_DISTRO:-centos8}-ansible:latest
+    image: "${IMAGE_NAMESPACE:-geerlingguy}/docker-${IMAGE_DISTRO:-centos8}-ansible:${IMAGE_TAG:-latest}"
     networks:
       - name: test_docker_network
         ipv4_address: 10.172.0.21
