--- a/ansible-cookbooks/postgres-etcd/roles/haproxy/handlers/main.yml
+++ b/ansible-cookbooks/postgres-etcd/roles/haproxy/handlers/main.yml
@@ -10,7 +10,7 @@
 
 - name: Check HAProxy is started and accepting connections
   wait_for:
-    port: 7000
+    port: "{{ haproxy_listen_port.stats }}"
     host: "{{ hostvars[inventory_hostname]['inventory_hostname'] }}"
     state: started
     timeout: 120
