--- a/ansible-cookbooks/postgres-etcd/roles/haproxy/tasks/main.yml
+++ b/ansible-cookbooks/postgres-etcd/roles/haproxy/tasks/main.yml
@@ -58,7 +58,7 @@
 
 - block:
     # RedHat os family version 8 (and higher)
-    - name: Install HAProxy v1.8 package
+    - name: Install HAProxy package
       package:
         name: haproxy
         state: present
@@ -123,13 +123,15 @@
         force_apt_get: true
         name: "haproxy=1.8.*"
         state: present
-      when: ansible_distribution_major_version is version('18', '<=')
+      when: (ansible_distribution == "Debian" and ansible_distribution_major_version is version('10', '<=')) or
+            (ansible_distribution == 'Ubuntu' and ansible_distribution_major_version is version('18', '<='))
 
     - name: Install HAProxy package
       apt:
         name: haproxy
         state: present
-      when: ansible_distribution_major_version is version('20', '>=')
+      when: (ansible_distribution == "Debian" and ansible_distribution_major_version is version('11', '>=')) or
+            (ansible_distribution == 'Ubuntu' and ansible_distribution_major_version is version('20', '>='))
   environment: "{{ proxy_env | default({}) }}"
   when: ansible_os_family == "Debian" and
         installation_method == "repo" and
@@ -317,6 +319,7 @@
     sysctl_set: true
     state: present
     reload: true
+  ignore_errors: true  # to prevent test failures in CI
   tags: haproxy, load_balancing
 
 - name: Add haproxy group
@@ -390,11 +393,11 @@
         line: "{{ item.line }}"
         backrefs: true
       loop:
-        - {regexp: '^.*bind.*:7000$', line: '    bind {{ hostvars[inventory_hostname].inventory_hostname }}:7000'}
-        - {regexp: '^.*bind.*:5000$', line: '    bind {{ hostvars[inventory_hostname].inventory_hostname }}:5000'}
-        - {regexp: '^.*bind.*:5001$', line: '    bind {{ hostvars[inventory_hostname].inventory_hostname }}:5001'}
-        - {regexp: '^.*bind.*:5002$', line: '    bind {{ hostvars[inventory_hostname].inventory_hostname }}:5002'}
-        - {regexp: '^.*bind.*:5003$', line: '    bind {{ hostvars[inventory_hostname].inventory_hostname }}:5003'}
+        - {regexp: '^.*bind.*:{{ haproxy_listen_port.stats }}$', line: '    bind {{ hostvars[inventory_hostname].inventory_hostname }}:{{ haproxy_listen_port.stats }}'}  # noqa 204
+        - {regexp: '^.*bind.*:{{ haproxy_listen_port.master }}$', line: '    bind {{ hostvars[inventory_hostname].inventory_hostname }}:{{ haproxy_listen_port.master }}'}  # noqa 204
+        - {regexp: '^.*bind.*:{{ haproxy_listen_port.replicas }}$', line: '    bind {{ hostvars[inventory_hostname].inventory_hostname }}:{{ haproxy_listen_port.replicas }}'}  # noqa 204
+        - {regexp: '^.*bind.*:{{ haproxy_listen_port.replicas_sync }}$', line: '    bind {{ hostvars[inventory_hostname].inventory_hostname }}:{{ haproxy_listen_port.replicas_sync }}'}  # noqa 204
+        - {regexp: '^.*bind.*:{{ haproxy_listen_port.replicas_async }}$', line: '    bind {{ hostvars[inventory_hostname].inventory_hostname }}:{{ haproxy_listen_port.replicas_async }}'}  # noqa 204
       loop_control:
         label: "{{ item.line }}"
       notify: "restart haproxy"
@@ -407,11 +410,11 @@
         line: "{{ item.line }}"
         backrefs: true
       loop:
-        - {regexp: '^.*bind.*:7000$', line: '    bind {{ hostvars[inventory_hostname].inventory_hostname }}:7000'}
-        - {regexp: '^.*bind.*:5000$', line: '    bind {{ cluster_vip }}:5000'}
-        - {regexp: '^.*bind.*:5001$', line: '    bind {{ cluster_vip }}:5001'}
-        - {regexp: '^.*bind.*:5002$', line: '    bind {{ cluster_vip }}:5002'}
-        - {regexp: '^.*bind.*:5003$', line: '    bind {{ cluster_vip }}:5003'}
+        - {regexp: '^.*bind.*:{{ haproxy_listen_port.stats }}$', line: '    bind {{ hostvars[inventory_hostname].inventory_hostname }}:{{ haproxy_listen_port.stats }}'}  # noqa 204
+        - {regexp: '^.*bind.*:{{ haproxy_listen_port.master }}$', line: '    bind {{ cluster_vip }}:{{ haproxy_listen_port.master }}'}
+        - {regexp: '^.*bind.*:{{ haproxy_listen_port.replicas }}$', line: '    bind {{ cluster_vip }}:{{ haproxy_listen_port.replicas }}'}
+        - {regexp: '^.*bind.*:{{ haproxy_listen_port.replicas_sync }}$', line: '    bind {{ cluster_vip }}:{{ haproxy_listen_port.replicas_sync }}'}
+        - {regexp: '^.*bind.*:{{ haproxy_listen_port.replicas_async }}$', line: '    bind {{ cluster_vip }}:{{ haproxy_listen_port.replicas_async }}'}
       loop_control:
         label: "{{ item.line }}"
       notify: "restart haproxy"
