--- a/ansible-cookbooks/postgres-etcd/roles/postgresql-users/tasks/main.yml
+++ b/ansible-cookbooks/postgres-etcd/roles/postgresql-users/tasks/main.yml
@@ -7,6 +7,7 @@
     name: "{{ item.name }}"
     password: "{{ item.password }}"
     encrypted: true
+    role_attr_flags: "{{ item.flags }}"
     login_unix_socket: "{{ postgresql_unix_socket_dir }}"
     port: "{{ postgresql_port }}"
     state: present
