--- a/ansible-cookbooks/kafka-zookeeper/kafka_and_zookeeper-cowin.yml
+++ b/ansible-cookbooks/kafka-zookeeper/kafka_and_zookeeper-cowin.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: all
+- hosts: kafka
   become: true
   pre_tasks:
     - raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal python-zipstream)
@@ -8,7 +8,8 @@
   become: true
   roles:
     - role: zookeeper
-      sansible_zookeeper_hosts: zookeeper_nodes
+      sansible_zookeeper_hosts:
+        - 10.120.1.80
 
 - name: Install kafka
   hosts: kafka
@@ -17,4 +18,5 @@
     - role: kafka
       sansible_kafka_listen_address: "{{ ansible_default_ipv4.address }}"
       sansible_kafka_advertised_host_name: "{{ ansible_default_ipv4.address }}"
-      sansible_kafka_zookeeper_hosts: zookeeper_nodes
+      sansible_kafka_zookeeper_hosts:
+        - 10.120.1.80
