--- a/inventory.ini
+++ b/inventory.ini
@@ -36,9 +36,12 @@ postgresql_pg_hba="[{type: 'host', database: 'all', user: 'all', address: '0.0.0
 
 #-----------------------------------------------------START KAFKA & ZOOKEEPER-------------------------------------------------------------------
 [kafka]
-192.168.0.6 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=192.168.0.6
-192.168.0.12 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=2 adv_ip=192.168.0.12
-192.168.0.4 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.4
+192.168.0.13 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=192.168.0.13
+192.168.0.8 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=2 adv_ip=192.168.0.8
+192.168.0.6 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.6
+
+[kafka:vars]
+zookeeper_nodes="['192.168.0.13','192.168.0.8','192.168.0.6']"
 #-----------------------------------------------------END KAFKA & ZOOKEEPER-------------------------------------------------------------------
 
 # ------------------------------------------------------------------------------
