--- a/ansible-cookbooks/redis/roles/redisdb/tasks/main.yml
+++ b/ansible-cookbooks/redis/roles/redisdb/tasks/main.yml
@@ -1,42 +1,27 @@
 ---
-- name: Checking Pre-Requisities
-  include: check-prerequisities.yml
+- include: check_vars.yml
 
-- name: Configure OS level packages
-  include: configure-packages.yml
-  when: >
-    inventory_hostname in groups['redis_nodes'] or
-    inventory_hostname in groups['standalone']
+- include: download.yml
+  tags:
+    - download
 
-- name: Install and configure redis with common configuration
-  include: install-configure.yml
-  when: >
-    inventory_hostname in groups['redis_nodes'] or
-    inventory_hostname in groups['standalone']
+- include: dependencies.yml
+  tags:
+    - install
 
-- name: Configure standalone Redis Server
-  include: standalone.yml
-  when: >
-    inventory_hostname in groups['standalone']
+- include: install.yml
+  tags:
+    - install
 
-- name: Configure Redis master
-  include: master.yml
-  when: >
-    inventory_hostname in groups['master_nodes']
+- include: server.yml
+  when: not redis_sentinel
+  tags:
+    - config
 
-- name: Configure Redis master
-  include: slave.yml
-  when: >
-    inventory_hostname in groups['slave_nodes']
+- include: sentinel.yml
+  when: redis_sentinel
+  tags:
+    - config
 
-- name: Running All Handlers
-  meta: flush_handlers
-
-- name: Including Healthcheck tasks
-  include: healthcheck.yml
-
-- name: Including playbook to create cluster
-  include: create-cluster.yml
-  when: >
-    inventory_hostname in groups['redis_cluster'] and
-    cluster_enabled
+- include: local_facts.yml
+  when: redis_local_facts|bool
