--- a/inventory.ini
+++ b/inventory.ini
@@ -78,6 +78,9 @@ calico_rr
 
 [redis-slave]
 192.168.0.12 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+
+[redis-slave:vars]
+master_node_ip="192.168.0.6"
 #-----------------------------------------------------END REDIS-------------------------------------------------------------------
 
 # ------------------------------------------------------------------------------
