--- a/ansible-cookbooks/redis/playbook.yml
+++ b/ansible-cookbooks/redis/playbook.yml
@@ -8,6 +8,6 @@
 - name: configure redis slaves
   hosts: redis-slave
   vars:
-    - redis_slaveof: "{{ hostvars['redis-master.example.com'].ansible_eth1.ipv4.address }} {{ redis_port }}"
+    - redis_slaveof: "{{ master_node_ip }} {{ redis_port }}"
   roles:
     - redisdb
