--- a/inventory.ini
+++ b/inventory.ini
@@ -36,12 +36,12 @@ postgresql_pg_hba="[{type: 'host', database: 'all', user: 'all', address: '0.0.0
 
 #-----------------------------------------------------START KAFKA & ZOOKEEPER-------------------------------------------------------------------
 [kafka]
-192.168.0.12 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=192.168.0.12
-192.168.0.13 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=2 adv_ip=192.168.0.13
-192.168.0.6 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.6
+192.168.0.26 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=192.168.0.26
+192.168.0.30 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=2 adv_ip=192.168.0.30
+192.168.0.27 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.27
 
 [kafka:vars]
-zookeeper_nodes="['192.168.0.12','192.168.0.13','192.168.0.6']"
+zookeeper_nodes="['192.168.0.26','192.168.0.30','192.168.0.27']"
 #-----------------------------------------------------END KAFKA & ZOOKEEPER-------------------------------------------------------------------
 
 #-----------------------------------------------------START KUBERNETES-------------------------------------------------------------------
@@ -83,14 +83,8 @@ calico_rr
 master_node_ip="192.168.0.6"
 #-----------------------------------------------------END REDIS-------------------------------------------------------------------
 
-# ------------------------------------------------------------------------------
+#-----------------------------------------------------START DOCKER-REGISTRY-------------------------------------------------------------------
 ; [registry]
 ; 13.234.32.156 ansible_ssh_private_key_file=./divoc-perf.pem ansible_ssh_user=ubuntu DOCKER_REGISTRY_USER=test DOCKER_REGISTRY_PASSWORD=testpassword
+#-----------------------------------------------------END DOCKER-REGISTRY-------------------------------------------------------------------
 
-; [elasticsearch]
-; 13.234.32.156 ansible_ssh_private_key_file=./divoc-perf.pem ansible_ssh_user=ubuntu
-
-; [kafka]
-; 13.235.244.251 ansible_ssh_private_key_file=./divoc-perf.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=10.0.13.78
-; 65.1.114.226 ansible_ssh_private_key_file=./divoc-perf.pem ansible_ssh_user=ubuntu broker_id=2 adv_ip=10.0.9.169
-; 13.127.108.73 ansible_ssh_private_key_file=./divoc-perf.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=10.0.11.233
