--- a/ansible-cookbooks/kafka-zookeeper/roles/kafka/files/tools-log4j.properties
+++ b/ansible-cookbooks/kafka-zookeeper/roles/kafka/files/tools-log4j.properties
@@ -5,7 +5,7 @@
 # (the "License"); you may not use this file except in compliance with
 # the License.  You may obtain a copy of the License at
 #
-#     http://www.apache.org/licenses/LICENSE-2.0
+#    http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
@@ -13,20 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-maxClientCnxns={{ zookeeper_maxClientCnxns }}
-# The number of milliseconds of each tick
-tickTime=2000
-# The number of ticks that the initial 
-# synchronization phase can take
-initLimit=10
-# The number of ticks that can pass between 
-# sending a request and getting an acknowledgement
-syncLimit=5
-# the directory where the snapshot is stored.
-dataDir={{ zookeeper_data_dir }}
-# the port at which the clients will connect
-clientPort={{ zookeeper_client_port }}
+log4j.rootLogger=WARN, stderr
 
-{% for server in play_hosts %}
-server.{{ hostvars[server]['id'] }}={{ hostvars[server]['ansible_nodename'] }}:2888:3888
-{% endfor %}
+log4j.appender.stderr=org.apache.log4j.ConsoleAppender
+log4j.appender.stderr.layout=org.apache.log4j.PatternLayout
+log4j.appender.stderr.layout.ConversionPattern=[%d] %p %m (%c)%n
+log4j.appender.stderr.Target=System.err
