--- a/ansible-cookbooks/kafka-zookeeper/roles/zookeeper/handlers/main.yml
+++ b/ansible-cookbooks/kafka-zookeeper/roles/zookeeper/handlers/main.yml
@@ -1,22 +1,7 @@
 ---
+- name: Reload systemd
+  command: systemctl daemon-reload
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "7"
 
-- name: start zookeeper
-  become: yes
-  become_user: root
-  service:
-    name: zookeeper
-    state: started
-
-- name: stop zookeeper
-  become: yes
-  become_user: root
-  service:
-    name: zookeeper
-    state: stopped
-
-- name: restart zookeeper
-  become: yes
-  become_user: root
-  service:
-    name: zookeeper
-    state: restarted
+- name: Restart zookeeper
+  service: name=zookeeper-server enabled=yes state=restarted
